Se agrega la vista de movimiento de dineros, se agrega manejo de errores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.show-sql= true
 
 #Actualizar_consultas
 spring.jpa.hibernate.ddl-auto= update
+
+spring.mvc.static-path-pattern=/content/**
